Chore: Code refactored